[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
igd =  { version = "0.12.1", features = ["aio"] }
local-ip-address = "0.6.3"
log = "0.4.25"
reqwest = "0.12.12"
serde = {version = "1.0.217", features = ["derive"]}
tokio = {version = "*", features = ["full"]}
toml = "0.8.20"
